fix svg bug on iphone

--- a/src/Components/Movies/Favourites.module.css
+++ b/src/Components/Movies/Favourites.module.css
@@ -19,10 +19,12 @@
   top: 3px;
   cursor: pointer;
   right: 13px;
+  max-width: 16px;
 }
 
 .myFavourites {
   position: relative;
+  max-width: 16px;
 }
 
 @media screen and (max-width: 800px) {
